apps/full-stack/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ui
  namespace: full-stack
spec:
  selector:
    matchLabels:
      app: frontend-ui
  template:
    metadata:
      labels:
        app: frontend-ui
    spec:
      containers:
        - name: swagger-ui
          image: docker.io/swaggerapi/swagger-ui:latest
          resources:
            requests:
              memory: "32Mi"
              cpu: "20m" # 2% de CPU
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: config-volume
            mountPath: /usr/share/nginx/html/swagger-initializer.js
            subPath: swagger-initializer.js
      volumes:
        - name: config-volume
          configMap:
            name: swagger-config
