apps/full-stack/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
  namespace: full-stack
spec:
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: 80
